Update Swagger documentation
