# backend/app/docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/api/add_tutor": {
+        "/add_tutor": {
             "post": {
                 "description": "Доступно только аутентифицированным пользователям с ролью тьютора",
                 "consumes": [
@@ -47,9 +47,9 @@
                 }
             }
         },
-        "/api/commit_code_reset_password": {
+        "/api/checkTokens": {
             "post": {
-                "description": "Меняет пароль после подтверждения кода",
+                "description": "возращяет успешные ответ, если токены не просрочены",
                 "consumes": [
                     "application/json"
                 ],
@@ -57,116 +57,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "password_recovery"
+                    "test"
                 ],
-                "summary": "Установка нового пароля",
-                "parameters": [
-                    {
-                        "description": "Email и код",
-                        "name": "credentials",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.Code_verification"
-                        }
-                    }
-                ],
+                "summary": "Функция проверки токенов",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "struct"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "struct"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "type": "struct"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/forgot_password": {
-            "post": {
-                "description": "Отправляет код подтверждения на email",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "password_recovery"
-                ],
-                "summary": "Запрос на сброс пароля",
-                "parameters": [
-                    {
-                        "description": "Email и пароль",
-                        "name": "credentials",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/database.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "struct"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "struct"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "type": "struct"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/get_tutor": {
-            "get": {
-                "description": "Доступно только аутентифицированным пользователям с ролью тьютора",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tutor"
-                ],
-                "summary": "Получение информации о тьюторе",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/database.Tutor"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/api.Error_answer"
+                            "$ref": "#/definitions/api.Success_answer"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
                         "schema": {
                             "$ref": "#/definitions/api.Error_answer"
                         }
@@ -197,36 +105,15 @@
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "type": "struct"
+                            "$ref": "#/definitions/api.Error_answer"
                         }
                     }
                 }
             }
         },
-        "/api/questionnaire": {
+        "/commit_code_reset_password": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Доступно только аутентифицированным пользователям",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "questionnaire"
-                ],
-                "summary": "Создание новой анкеты",
-                "responses": {}
-            }
-        },
-        "/api/reset_password": {
-            "post": {
-                "description": "Проверяет код и разрешает смену пароля",
+                "description": "Меняет пароль после подтверждения кода",
                 "consumes": [
                     "application/json"
                 ],
@@ -236,15 +123,15 @@
                 "tags": [
                     "password_recovery"
                 ],
-                "summary": "Подтверждение кода для сброса пароля",
+                "summary": "Установка нового пароля",
                 "parameters": [
                     {
-                        "description": "Email и пароль",
+                        "description": "Email и код",
                         "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.Update_password"
+                            "$ref": "#/definitions/api.Code_verification"
                         }
                     }
                 ],
@@ -263,6 +150,87 @@
                     },
                     "405": {
                         "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    }
+                }
+            }
+        },
+        "/forgot_password": {
+            "post": {
+                "description": "Отправляет код подтверждения на email",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "password_recovery"
+                ],
+                "summary": "Запрос на сброс пароля",
+                "parameters": [
+                    {
+                        "description": "Email и пароль",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/database.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Success_answer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_tutor": {
+            "get": {
+                "description": "Доступно только аутентифицированным пользователям с ролью тьютора",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tutor"
+                ],
+                "summary": "Получение информации о тьюторе",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Tutor"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/api.Error_answer"
                         }
@@ -320,6 +288,27 @@
                         }
                     }
                 }
+            }
+        },
+        "/questionnaire": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Доступно только аутентифицированным пользователям",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "questionnaire"
+                ],
+                "summary": "Создание новой анкеты",
+                "responses": {}
             }
         },
         "/refresh_token": {
@@ -488,6 +477,145 @@
                     }
                 }
             }
+        },
+        "/reset_password": {
+            "post": {
+                "description": "Проверяет код и разрешает смену пароля",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "password_recovery"
+                ],
+                "summary": "Подтверждение кода для сброса пароля",
+                "parameters": [
+                    {
+                        "description": "Email и пароль",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Update_password"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Success_answer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    }
+                }
+            }
+        },
+        "/savetrackers": {
+            "post": {
+                "description": "Пользовтаель получет трекеры с сервера",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "registration"
+                ],
+                "summary": "Для получения трекеров с сервера",
+                "parameters": [
+                    {
+                        "description": "Access Token",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Get_trackers_request"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Trackers"
+                        }
+                    },
+                    "304": {
+                        "description": "Not Modified",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    }
+                }
+            }
+        },
+        "/update": {
+            "get": {
+                "description": "Возвращяет universities.json файл",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "universities"
+                ],
+                "summary": "Эндпоинт для обновления университетов",
+                "responses": {
+                    "200": {
+                        "description": "Successfully downloaded universities.json",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/database.University"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request - Only GET method allowed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error - Failed to send file",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -521,6 +649,14 @@
                 }
             }
         },
+        "api.Get_trackers_request": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "api.Refresh_token": {
             "type": "object",
             "properties": {
@@ -548,6 +684,34 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                }
+            }
+        },
+        "api.Tracker_save": {
+            "type": "object",
+            "properties": {
+                "timestamp": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "trackers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "api.Trackers": {
+            "type": "object",
+            "properties": {
+                "trackers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -596,6 +760,27 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "database.University": {
+            "type": "object",
+            "properties": {
+                "country": {
+                    "type": "string"
+                },
+                "extra_data": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
